--- a/sass/main.scss
+++ b/sass/main.scss
@@ -63,6 +63,7 @@ input#searchbox {
   background-color: #333;
   border: 0;
   border-bottom: 2px solid #ccc;
+  border-radius: 0;
   
   color: #ccc;
   font-size: 20px;
