--- a/sass/main.scss
+++ b/sass/main.scss
@@ -142,4 +142,12 @@ div#no-results {
   background-color: #383838;
 }
 
+div#not-supported {
+  position: absolute;
+  top: 30px;
+  padding: 20px;
+  text-align: center;
+  font-size: 30px;
+}
+
 /* Tablet/Desktop */
