Fixed 'unsupported' message showing up on supported platforms

--- a/css/main.css
+++ b/css/main.css
@@ -129,8 +129,9 @@ div#no-results {
 /* line 145, ../sass/main.scss */
 div#not-supported {
   position: absolute;
-  top: 30px;
-  padding: 20px;
+  top: 150px;
+  left: 20px;
+  width: calc(100% - 40px);
   text-align: center;
   font-size: 30px;
 }
