--- a/css/main.css
+++ b/css/main.css
@@ -13,28 +13,35 @@ body {
 }
 
 /* line 17, ../sass/main.scss */
-main {
+h3 {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 30px;
   width: 100%;
-  height: 100%;
+  text-align: center;
 }
 
-/* line 25, ../sass/main.scss */
+/* line 24, ../sass/main.scss */
+main {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  width: 80%;
+  margin: 0 10%;
+}
+
+/* line 32, ../sass/main.scss */
 span#http-label {
   position: absolute;
-  top: 103px;
-  left: 50%;
+  top: 3px;
+  left: 0;
   width: 65px;
-  margin: 0 -153px;
   height: 25px;
   padding-bottom: 1px;
   padding-left: 5px;
   color: #888;
   z-index: 10;
 }
-/* line 42, ../sass/main.scss */
+/* line 48, ../sass/main.scss */
 span#http-label:after {
   content: "";
   position: absolute;
@@ -45,15 +52,14 @@ span#http-label:after {
   background-color: #999;
 }
 
-/* line 53, ../sass/main.scss */
+/* line 59, ../sass/main.scss */
 input#searchbox {
   position: absolute;
-  top: 100px;
-  left: 50%;
   height: 25px;
-  width: 200px;
-  margin: 0 -100px;
+  right: 0;
+  width: calc(100% - 65px + 6px);
   padding: 2px;
+  padding-left: 0;
   padding-right: 5px;
   background-color: #333;
   border: 0;
@@ -63,26 +69,26 @@ input#searchbox {
   font-size: 20px;
   font-family: sans-serif;
 }
-/* line 73, ../sass/main.scss */
+/* line 78, ../sass/main.scss */
 input#searchbox:focus {
   outline: none;
   border-color: #378ea1;
 }
 
-/* line 79, ../sass/main.scss */
+/* line 84, ../sass/main.scss */
 ul#results {
   position: absolute;
-  top: 131px;
-  left: 50%;
+  top: 31px;
+  left: 0;
   height: auto;
-  min-width: 250px;
-  margin: 0 -153px;
+  width: calc(100% - 10px);
   padding: 5px;
+  margin: 0;
   border-top: 0;
   background-color: #383838;
   list-style-type: none;
 }
-/* line 95, ../sass/main.scss */
+/* line 100, ../sass/main.scss */
 ul#results div.section li.title {
   position: relative;
   display: block;
@@ -91,11 +97,11 @@ ul#results div.section li.title {
   color: #0AC993;
   padding: 2px 0;
 }
-/* line 103, ../sass/main.scss */
+/* line 108, ../sass/main.scss */
 ul#results div.section li.title.overbar {
   padding-top: 10px;
 }
-/* line 106, ../sass/main.scss */
+/* line 111, ../sass/main.scss */
 ul#results div.section li.title.overbar:before {
   content: "";
   position: absolute;
@@ -106,19 +112,18 @@ ul#results div.section li.title.overbar:before {
   margin: 0 -87.5px;
   background-color: #a8a8a8;
 }
-/* line 120, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 ul#results div.section li span.http, ul#results div.section li span.domain {
   color: #999;
 }
 
-/* line 127, ../sass/main.scss */
+/* line 132, ../sass/main.scss */
 div#no-results {
   position: absolute;
-  top: 131px;
-  left: 50%;
+  top: 31px;
+  left: 0;
   height: auto;
-  min-width: 250px;
-  margin: 0 -153px;
+  width: calc(100% - 10px);
   padding: 5px;
   border-top: 0;
   text-align: center;
@@ -126,7 +131,7 @@ div#no-results {
   background-color: #383838;
 }
 
-/* line 145, ../sass/main.scss */
+/* line 148, ../sass/main.scss */
 div#not-supported {
   position: absolute;
   top: 150px;
