--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 // Variables
-$searchbox-top: 100px;
+$http-label-width: 65px;
 
 .hidden {
   display: none;
@@ -14,20 +14,26 @@ body {
   font-size: 20px;
 }
 
+h3 {
+  position: absolute;
+  top: 30px;
+  width: 100%;
+  text-align: center;
+}
+
 main {
   position: absolute;
-  top: 0;
+  top: 100px;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  margin: 0 10%;
 }
 
 span#http-label {
   position: absolute;
-  top: $searchbox-top + 3px;
-  left: 50%;
-  width: 65px;
-  margin: 0 -153px;
+  top: 3px;
+  left: 0;
+  width: $http-label-width;
   height: 25px;
   
   padding-bottom: 1px;
@@ -52,12 +58,11 @@ span#http-label {
 
 input#searchbox {
   position: absolute;
-  top: $searchbox-top;
-  left: 50%;
   height: 25px;
-  width: 200px;
-  margin: 0 -100px;
+  right: 0;
+  width: calc(100% - #{$http-label-width} + 6px);
   padding: 2px;
+  padding-left: 0;
   padding-right: 5px;
   
   background-color: #333;
@@ -78,13 +83,13 @@ input#searchbox {
 
 ul#results {
   position: absolute;
-  top: 131px;
-  left: 50%;
+  top: 31px;
+  left: 0;
   height: auto;
-  min-width: 250px;
-  margin: 0 -153px;
+  width: calc(100% - 10px);
   padding: 5px;
   
+  margin: 0;
   border-top: 0;
   
   background-color: #383838;
@@ -126,11 +131,10 @@ ul#results {
 
 div#no-results {
   position: absolute;
-  top: 131px;
-  left: 50%;
+  top: 31px;
+  left: 0;
   height: auto;
-  min-width: 250px;
-  margin: 0 -153px;
+  width: calc(100% - 10px);
   padding: 5px;
   
   border-top: 0;
@@ -138,7 +142,6 @@ div#no-results {
   text-align: center;
   
   color: #0AC993;
-  
   background-color: #383838;
 }
 
